package Game;

public class CodeLockDoor extends Door {
}
