package Game;

public class HiddenDoor extends Door {
}
