package Game;

public class Companion extends Character
{
    public Companion(String name, int maxHealth, int strength, int health)
    {
        super(name, maxHealth, strength, health);
    }
}
