@startuml

class Hero extends Charater {
    - bag : bool

    + fight() : void
    + hasBag() : bool
}

class Location {
    - nameLoc : String
    - map<String, exit>
    - cmd : List<commands>
}

class Door {
    - nameDoor : String

    - otherSide(Location) : Location
}

class LockDoor extends Door {

}

class CodeLockDoor extends Door {

}

class HiddenDoor extends Door {

}

class Charater {
 - charName : String
 - MaxHealth : int
 - Health : int
 - Armor : int
 - Strength : int
 - Accuracy : int
 - AttackSpeed : int
}

class Companion {
 - compName : String
}

class Commands {
    - name : String
}

class Items {
    - itemName : String
    - volume : double

    - bonusMaxHealth : int
    - bonusHealth : int
    - bonusArmor : int
    - bonusStrength : int
    - bonusAccuracy : int
    - bonusAttackSpeed : int

    + getVolume() : double
    + getName() : String
    + printName() : void

    + equip(Hero) : void
    + unequip(Hero) : void
}

class Bags extends Items{
    - capacity : double
    - items : List<Items>

    + getItem() : List<Items>
}

Location -> Location
Commands "1,n" <--* Location
Door "1,n" --* "2,2" Location
Location "1,1" --o Charater


Bags "0,1" --* Hero
Bags *-- "0,n" Items

Companion "0,n" --* Hero
Door <.. Hero


@enduml